--- a/signotes.tex
+++ b/signotes.tex
@@ -151,7 +151,7 @@ Du finner antallet signifikante siffer ved å telle fra venstre mot høyre alle 
 \item $\mathbf{2.0}\cdot10^{-2}$ har 2 signifikante siffer. 
 \end{itemize}
 
-Ikke bli forvirret av nullene. Alle disse måtene å skrive tallet på har 5 signifikante siffer:
+Ikke bli forvirret av nullene. Alle de følgende måtene å skrive tallet $\mathbf{2.0000}\cdot10^{-2}$ på har 5 signifikante siffer:
 
 \begin{equation}
 \mathbf{2.0000}\cdot10^{-2} = 0.020000 = \mathbf{20000}\cdot10^{-6} 
@@ -213,7 +213,7 @@ En kortfattet oppsummering av nye ord:
 \item \emph{Populasjon} - mengden av alle mulige målinger.
 \item \emph{Utvalg} - en begrenset menge målinger tatt fra populasjonen.
 \item \emph{Populasjonens gjennomsnitt} - Det "sanne" gjennomsnittet, beregnet fra alle mulige målinger.
-\item \emph{Utvalgets gjennomsnitt} - Gjennomsnittet beregnet på mengden.
+\item \emph{Utvalgets gjennomsnitt} - Gjennomsnittet beregnet fra utvalget.
 \item \emph{Parameter} - Størrelser beregnet fra populasjonen.
 \item \emph{Statistic} - Størrelser beregnet fra utvalget.
 \end{itemize}
@@ -262,7 +262,7 @@ Standardavviket i et utvalg kan regnes ut fra standardfeilen ved
 \sigma = \sqrt{N} \cdot SE =\frac{1}{\sqrt{N}} \sqrt{ \sum_{i=1}^N (x_i - \bar{x})^2} .
 \end{equation}
 
-Hvor $N$ er antall målinger. Det er vanlig å regne ut standardavviket direkte fra det siste uttrykket over, og deretter standardfeilen ved å dele på $\sqrt{N}$.\footnote{Legg gjerne merke til at vi her har brukt faktoren $\frac{1}{\sqrt{N}}$, unge mester. Dette er for å holde ligningene rene og pene. Når standardavviket defineres med faktoren $\frac{1}{\sqrt{N-1}}$  kalles det for "Bessel's korreksjon", og hensikten er å ikke underestimere standardavviket.}
+Hvor $N$ er antall målinger. Det er vanlig å regne ut standardavviket direkte fra det siste uttrykket over, og deretter standardfeilen ved å dele på $\sqrt{N}$.\footnote{Legg gjerne merke til at vi her har brukt faktoren $\frac{1}{\sqrt{N}}$. Dette er for å holde ligningene rene og pene. Når standardavviket defineres med faktoren $\frac{1}{\sqrt{N-1}}$  kalles det for "Bessel's korreksjon", og hensikten er å ikke underestimere standardavviket.}
 
 \begin{figure}[h]
 \centering
