--- a/signotes.tex
+++ b/signotes.tex
@@ -32,8 +32,13 @@
 	{\large \today\par}
 \end{centering}
 
+\vspace{1cm}
+
+Oppdatert versjon: https://github.com/audunsh/Notater-om-signifikans .
+
 
 \tableofcontents
+
 
 \pagebreak
 
@@ -49,6 +54,8 @@ Dette dokumentet er ment å gi en kortfattet og superenkel guide til bruk av:
 
 Hensikten er at du på noen timer skal kunne lære deg alt du trenger for å mestre disse verktøyene.  Det krever selvfølgelig litt innsats fra din side også. Hver seksjon er på noen få linjer, og jeg har forsøkt så godt som mulig å sikre at disse få linjene inneholder alt du trenger å vite om saken (for nå, i det minste). Det som er din oppgave er å \emph{forstå} hva som står der. Det innebærer å \emph{lese} teksten, men også å \emph{tenke} over det du leser. Om noe virker uklart, rart eller uforståelig kan du lene deg tilbake, se litt opp i taket og tenke nøye gjennom over hva du nettopp har lest. Kanskje klarner det, kanskje ikke. I verste fall er det jeg som har skrevet noe feil, og i så fall håper jeg du kan sende meg en e-post på \href{mailto:audunsh4@gmail.com}{audunsh4@gmail.com}, så skal jeg fikse det så fort som mulig.
 
+
+
 \vspace{.5cm}
 
 Å studere vitenskap er litt som å drive med mental kampsport. Jeg er helt sikker på at du vil få dette til, men ta i mot et råd fra en 900 år gammel Jedi-mester: \emph{"Do, or do not. There is no try."}. Lykke til! :)
@@ -58,6 +65,8 @@ Hensikten er at du på noen timer skal kunne lære deg alt du trenger for å mes
 \begin{flushright}
 Med vennlig hilsen Audun
 \end{flushright}
+
+
 
 
 \pagebreak
